[package]
name = "project-euler"
version = "0.1.0"
authors = ["Ryoji <ryoji.kodakari@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bit-vec = "0.6.2"
rand = "0.8.3"
rayon = "1.5"

[dev-dependencies]
criterion = "0.3"

[lib]
bench = false

[[bench]]
name = "bench_main"
harness = false
